# event-aggregator

./: .env.template  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: fe5b25fb5d27_initial.py
api/: router.py  schemas.py  usecases.py
core/: cache.py  config.py
database/: db.py  models.py  repositories.py
provider/: client.py  paginator.py
sync/: sync_worker.py
tests/: test_client.py  test_pagin.py
